revamped structure of repo

--- a/notebooks/evaulation.ipynb
+++ b/notebooks/evaulation.ipynb
@@ -752,6 +752,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Validation, Network size bigger, try data without ecc, weights on duplicates, can increase the size of dataset. \n",
+    "Use a baseline classifier to compare with. Try knn. \n",
+    "\n",
+    "Check the salincy of the network. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
