upgrade to network

--- a/notebooks/evaulation.ipynb
+++ b/notebooks/evaulation.ipynb
@@ -755,10 +755,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Validation, Network size bigger, try data without ecc, weights on duplicates, can increase the size of dataset. \n",
-    "Use a baseline classifier to compare with. Try knn. \n",
+    "- Validation (done), Network size bigger (done), try data without ecc (done), weights on duplicates (done), can increase the size of dataset (population synthesis). \n",
+    "Use a baseline classifier to compare with. Try knn. (done) \n",
     "\n",
-    "Check the salincy of the network. "
+    "Check the salincy of the network (done)\n",
+    "\n",
+    "- Increase the dataset by taking Gaussian from the median of the fisher matrix. \n",
+    "- To address the classification imbalance -> increase the number of points for NSWD? \n",
+    "- Test the weights out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sum up probability for Models 1 2 3, Error analysis on baseline model, log transformation for A f_dot and SNR. Resampling and weighting. Figure out model's behaviour."
    ]
   },
   {
