major updates to learning and dataformatting

--- a/notebooks/evaulation.ipynb
+++ b/notebooks/evaulation.ipynb
@@ -773,6 +773,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the limits on the physical parameters\n",
+    "Train the data from 1mHz onwards with sampling\n",
+    "Limit sampling range\n",
+    "colour plot for different parameters on specificity \n",
+    "New Baseline\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
